--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,6 +1,33 @@
 @use "@/style/_variables" as *;
 
+/*
+
+layout = [
+  최대 width : 1100px,
+  safe area : mobile: 15px, tablet: 20px, desktop: 20px
+]
+
+font = [
+  {
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+  },
+  {
+    font-family: "Charmonman", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+]
+ 
+*/
+
+* {
+  box-sizing: border-box;
+}
+
 html {
   min-height: 100vh;
-  background-color: #FEFEFE;
+  background-color: $back-ground-color--white;
 }
