Ui : 색상 변수 추가

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,9 @@
 $back-ground-color--white: #FEFEFE;
 
 $font-color--black: #1B1B1B;
+$font-color--gray: #7e7e7e;
+
+$border-color--gray: #e4e4e4;
 
 $breakpoint-mobile: 320px;
 $breakpoint-tablet: 768px;
