--- a/src/component/Header/index.module.scss
+++ b/src/component/Header/index.module.scss
@@ -133,6 +133,7 @@
         width: 110px;
         height: 40px;
         background-color: #000000;
+        border: none;
         border-radius: 3px;
         letter-spacing: 0.8px;
         font-size: 15px;
