--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,7 +1,8 @@
 $back-ground-color--white: #FEFEFE;
 
 $font-color--black: #1B1B1B;
-$font-color--gray: #7e7e7e;
+$font-color--dark-gray: #7e7e7e;
+$font-color--bright-gray: #b6b6b6;
 
 $border-color--gray: #e4e4e4;
 
