--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,43 @@
-main {
-  
+@use "@/style/_variables" as *;
+
+.page-component {
+  width: 100%;
+  margin-bottom: 500px;
+
+  .eaasy-thumbnail-card-box {
+    overflow-x: scroll;
+    width: 100%;
+    aspect-ratio: 1 / 0.8;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 80%;
+    grid-template-rows: minmax(1fr, 400px);
+    column-gap: 30px;
+    padding: 10px;
+
+    &::-webkit-scrollbar {
+      display: none; // Chrome, Safari, Opera
+    }
+
+    @include tablet {
+      grid-auto-flow: row;
+      grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+      row-gap: 20px;
+      width: 100%;
+      max-width: 1100px;
+      max-height: none;
+      aspect-ratio: 1 / 0.55;
+      margin: 0 auto;
+      padding: 20px;
+    }
+  }
+
+  .boundary-line {
+    max-width: 1100px;
+    height: 1px;
+    margin: 30px auto;
+    background-color: $border-color--gray;
+  }
 }
