--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,11 +1,3 @@
-$back-ground-color--white: #FEFEFE;
-
-$font-color--black: #1B1B1B;
-$font-color--dark-gray: #7e7e7e;
-$font-color--bright-gray: #b6b6b6;
-
-$border-color--gray: #e4e4e4;
-
 $breakpoint-mobile: 320px;
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1025px;
@@ -27,3 +19,33 @@ $breakpoint-desktop: 1025px;
     @content;
   }
 }
+
+$max-width: 1100;
+
+$safe-area--mobile: 10; // 좌우 or 상하좌우 padding 값
+$safe-area--tablet: 20;
+$safe-area--desktop: 20;
+
+$back-ground-color--white: #FEFEFE;
+
+$border-color--gray: #e4e4e4;
+
+$font-color--black: #1B1B1B;
+$font-color--dark-gray: #7e7e7e;
+$font-color--bright-gray: #b6b6b6;
+
+/*
+  font = [
+    {
+      font-family: "Roboto Condensed", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: <weight>;
+      font-style: normal;
+    },
+    {
+      font-family: "Charmonman", cursive;
+      font-weight: 400;
+      font-style: normal;
+    }
+  ]
+*/
