--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,40 +4,171 @@
   width: 100%;
   margin-bottom: 500px;
 
-  .eaasy-thumbnail-card-box {
-    overflow-x: scroll;
-    width: 100%;
-    aspect-ratio: 1 / 0.8;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 80%;
-    grid-template-rows: minmax(1fr, 400px);
-    column-gap: 30px;
-    padding: 10px;
+  .eaasy-thumbnail-card-main-section {
+    position: relative;
 
-    &::-webkit-scrollbar {
-      display: none; // Chrome, Safari, Opera
+    .left-arrow-wrapper,
+    .right-arrow-wrapper {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 20;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 60px;
+      height: 60px;
+      background-color: #E7E7E7;
+      border-radius: 50%;
+      opacity: 0.4;
+      cursor: pointer;
+
+      @include tablet {
+        width: 100px;
+        height: 100px;
+      }
+
+      &.left-arrow-wrapper {
+        left: 10px;
+
+        @include tablet {
+          left: 20px;
+        }
+
+        @include desktop {
+          left: 30px;
+        }
+      }
+
+      &.right-arrow-wrapper {
+        right: 10px;
+
+        @include tablet {
+          right: 20px;
+        }
+
+        @include desktop {
+          right: 30px;
+        }
+      }
     }
 
-    @include tablet {
-      grid-auto-flow: row;
-      grid-template: repeat(3, 1fr) / repeat(2, 1fr);
-      row-gap: 20px;
+    .eaasy-thumbnail-card-main-box-wrapper {
+      overflow-x: scroll;
+      position: relative;
+      z-index: 10;
       width: 100%;
-      max-width: 1100px;
-      max-height: none;
-      aspect-ratio: 1 / 0.55;
-      margin: 0 auto;
-      padding: 20px;
+      scrollbar-width: none;
+      
+      .eaasy-thumbnail-card-main-box {
+        display: flex;
+        width: min(100%, 400px);
+        max-width: #{$max-width}px;
+        height: 500px;
+        margin: 20px auto 0;
+
+        @include tablet {
+          width: 100%;
+        }
+      }
     }
   }
 
   .boundary-line {
-    max-width: 1100px;
+    max-width: #{$max-width}px;
     height: 1px;
     margin: 30px auto;
     background-color: $border-color--gray;
+  }
+
+  .essay-thumbnail-card-vertical-section {
+    width: 100%;
+    padding: 0 #{$safe-area--mobile}px;
+  
+    @include tablet {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 #{$safe-area--tablet}px;
+    }
+  
+    h2 {
+      margin: 0 0 25px;
+      font-size: 30px;
+      font-weight: 600;
+      font-family: "Charmonman", cursive;
+    }
+  
+    ul {
+      overflow-x: scroll;
+      list-style-type: none;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      display: flex;
+      gap: 15px;
+      padding: 0;
+  
+      li {
+        min-width: 70px;
+        padding: 5px 8px;
+        border: 1px solid $border-color--gray;
+        text-align: center;
+        white-space: nowrap;
+        letter-spacing: 0.5px;
+        font-size: 12px;
+        color: $font-color--black;
+  
+        &:hover {
+          cursor: pointer;
+        }
+      }
+  
+      li.--selected {
+        background-color: $font-color--black;
+        border: none;
+        color: $back-ground-color--white;
+      }
+    }
+  
+    .article-box {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 220px;
+      gap: 30px 20px;
+      width: 100%;
+  
+  
+      @include tablet {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        aspect-ratio: 1 / 1.2;
+      }
+
+      @include desktop {
+        aspect-ratio: 1 / 1.1;
+      }
+    }
+
+    button {
+      display: block;
+      padding: 15px 25px;
+      margin: 60px auto 0;
+      background-color: inherit;
+      border: none;
+      border-radius: 20px;
+      letter-spacing: 1.5px;
+      font-size: 16px;
+      font-family: "Roboto Condensed", sans-serif;
+      color: $font-color--dark-gray;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      svg {
+        position: relative;
+        top: 7px;
+        right: -8px;
+      }
+    }
   }
 }
