Ui : 반응형 수정

--- a/src/component/EssayThumbnailCardVertical/index.module.scss
+++ b/src/component/EssayThumbnailCardVertical/index.module.scss
@@ -60,6 +60,10 @@
 
       small {
         color: $font-color--bright-gray;
+
+        @include tablet {
+          font-size: 12px;
+        }
       }
 
       .created-at {
