--- a/src/component/Header/index.module.scss
+++ b/src/component/Header/index.module.scss
@@ -31,12 +31,17 @@
       padding: 20px;
     }
 
-    h1 {
+    > h1 {
       margin: 0;
       font-family: "Charmonman", cursive;
 
       &:hover {
         cursor: pointer;
+      }
+
+      > a {
+        color: inherit;
+        text-decoration: none;
       }
     }
 
