--- a/src/app/articles/page.module.scss
+++ b/src/app/articles/page.module.scss
@@ -13,11 +13,24 @@
   }
 
   > h1 {
-    margin: 120px 0 0;
+    margin: 50px 0 0;
     text-align: center;
     letter-spacing: 4px;
     font-size: 40px;
     font-family: "Charmonman", cursive;
+
+    @include tablet {
+      margin-top: 80px;
+    }
+  }
+
+  > small {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    letter-spacing: 0.5px;
+    font-weight: 450;
+    color: $font-color--bright-gray;
   }
 
   .BoxCategoryBox-wrapper {
