--- a/src/component/Header/index.module.scss
+++ b/src/component/Header/index.module.scss
@@ -4,14 +4,12 @@
   position: fixed;
   z-index: 100;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
+  height: 60px;
   margin: 0 auto;
   background-color: $back-ground-color--white;
+  border-bottom: 1px solid $border-color--gray;
   color: $font-color--black;
   transition: box-shadow 0.3s ease;
 
@@ -22,7 +20,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1100px;
+    // max-width: 1100px;
     margin: 0 auto;
     padding: 10px;
     background-color: inherit;
@@ -31,17 +29,21 @@
       padding: 20px;
     }
 
-    > h1 {
-      margin: 0;
-      font-family: "Charmonman", cursive;
-
+    > .main-banner-wrapper {
       &:hover {
         cursor: pointer;
       }
 
       > a {
-        color: inherit;
         text-decoration: none;
+        font-size: 23px;
+        font-weight: bold;
+        font-family: "Charmonman", cursive;
+        color: inherit;
+
+        @include tablet {
+          font-size: 25px;
+        }
       }
     }
 
@@ -128,5 +130,21 @@
       top: 80px;
       right: 20px;
     }
+  }
+
+  .side-menu-wrapper {
+    position: fixed;
+    z-index: 110;
+    top: 0;
+    right: -270px;
+    transition: right 0.3s ease-out;
+  }
+
+  .side-menu-wrapper.close {
+    right: -270px;
+  }
+
+  .side-menu-wrapper.--open {
+    right: 0;
   }
 }
