--- a/src/component/EssayThumbnailCardVertical/index.module.scss
+++ b/src/component/EssayThumbnailCardVertical/index.module.scss
@@ -7,6 +7,10 @@
   width: 100%;
   height: 100%;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   .thumbnail-wrapper {
     position: relative;
     width: 100%;
